# stvo-pl-ros

./: CMakeLists.txt  README.md  package.xml
app/: imageStVO.cpp
config/config/: config_euroc.yaml
include/: auxiliar.h  config.h  dataset.h  gridStructure.h  lineIterator.h  matching.h  pinholeStereoCamera.h  stereoFeatures.h  stereoFrame.h  stereoFrameHandler.h  timer.h  visualizer.h
src/: auxiliar.cpp  config.cpp  dataset.cpp  gridStructure.cpp  lineIterator.cpp  matching.cpp  pinholeStereoCamera.cpp  stereoFeatures.cpp  stereoFrame.cpp  stereoFrameHandler.cpp  timer.cpp  visualizer.cpp
